--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
       "role": "Developer"
     }
     ],
+    "config": {
+      "vendor-dir": "lib/Composer_repos"
+    },
     "require": {
       "parsecsv/php-parsecsv": "0.4.5"
     }
